<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent">
    <TextView
        android:id="@+id/name_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name_heading"/>
    <EditText
        android:id="@+id/name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name_value"/>

    <TextView
        android:id="@+id/race_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/race_heading"/>
    <TextView
        android:id="@+id/race_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/race_value"/>

    <TextView
        android:id="@+id/class_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/class_heading"/>
    <TextView
        android:id="@+id/class_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/class_value"/>
    <TextView
        android:id="@+id/constitution_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/constitution_stat"/>
    <TextView
        android:id="@+id/constitution_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/constitution_value"/>

    <TextView
        android:id="@+id/strength_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/strength_stat"/>
    <TextView
        android:id="@+id/strength_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/strength_value"/>

    <TextView
        android:id="@+id/dexterity_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dexterity_stat"/>
    <TextView
        android:id="@+id/dexterity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dexterity_value"/>

    <TextView
        android:id="@+id/intelligence_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/intelligence_stat"/>
    <TextView
        android:id="@+id/intelligence_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/intelligence_value"/>

    <TextView
        android:id="@+id/wisdom_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/wisdom_stat"/>
    <TextView
        android:id="@+id/wisdom_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/wisdom_value"/>

    <TextView
        android:id="@+id/charisma_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/charisma_stat"/>
    <TextView
        android:id="@+id/charisma_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/charisma_value"/>

</LinearLayout>