<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/name_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name_heading"/>
            <EditText
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name_value"/>

            <TextView
                android:id="@+id/race_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/race_heading"/>
            <TextView
                android:id="@+id/race_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/race_value"/>

            <TextView
                android:id="@+id/class_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/class_heading"/>
            <TextView
                android:id="@+id/class_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/class_value"/>
            <TextView
                android:id="@+id/constitution_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/constitution_stat"/>
            <TextView
                android:id="@+id/constitution_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/constitution_value"/>

            <TextView
                android:id="@+id/strength_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/strength_stat"/>
            <TextView
                android:id="@+id/strength_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/strength_value"/>

            <TextView
                android:id="@+id/dexterity_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dexterity_stat"/>
            <TextView
                android:id="@+id/dexterity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dexterity_value"/>

            <TextView
                android:id="@+id/intelligence_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/intelligence_stat"/>
            <TextView
                android:id="@+id/intelligence_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/intelligence_value"/>

            <TextView
                android:id="@+id/wisdom_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wisdom_stat"/>
            <TextView
                android:id="@+id/wisdom_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wisdom_value"/>

            <TextView
                android:id="@+id/charisma_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/charisma_stat"/>
            <TextView
                android:id="@+id/charisma_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/charisma_value"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/roll_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25dp"
        android:text="@string/roll_result"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView
            android:id="@+id/d100_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="5dp"
            android:gravity="center"
            android:background="@drawable/buttons"
            android:textColor="@android:color/black"
            android:text="@string/d100"/>
        <TextView
            android:id="@+id/d20_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:gravity="center"
            android:background="@drawable/buttons"
            android:textColor="@android:color/black"
            android:text="@string/d20"/>
        <TextView
            android:id="@+id/d12_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:gravity="center"
            android:background="@drawable/buttons"
            android:textColor="@android:color/black"
            android:text="@string/d12"/>
        <TextView
            android:id="@+id/d10_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:gravity="center"
            android:background="@drawable/buttons"
            android:textColor="@android:color/black"
            android:text="@string/d10"/>
        <TextView
            android:id="@+id/d8_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:gravity="center"
            android:background="@drawable/buttons"
            android:textColor="@android:color/black"
            android:text="@string/d8"/>
        <TextView
            android:id="@+id/d6_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:gravity="center"
            android:background="@drawable/buttons"
            android:textColor="@android:color/black"
            android:text="@string/d6"/>
        <TextView
            android:id="@+id/d4_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:gravity="center"
            android:background="@drawable/buttons"
            android:textColor="@android:color/black"
            android:text="@string/d4"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/attack_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="5dp"
                android:gravity="center"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:text="@string/attack_button"/>
            <TextView
                android:id="@+id/attack_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack_text"/>
            <EditText
                android:id="@+id/attack_modifier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/attack_modifier"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/damage_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:gravity="center"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:text="@string/damage_button"/>
            <TextView
                android:id="@+id/damage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/damage_text"/>
            <EditText
                android:id="@+id/dice_multiplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/dice_multiplier"/>
            <TextView
                android:id="@+id/dice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d"/>
            <Spinner
                android:id="@+id/dice_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/damage_dice">
            </Spinner>
            <TextView
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"/>
            <EditText
                android:id="@+id/damage_modifier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/damage_modifier"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>